Bright/Contrast node is broken #67808

Closed
opened 2019-07-27 18:44:52 +02:00 by Yevgeny Makarov · 5 comments

Blender Version
Broken: all

Short description of error
The Brightness/Contrast node of the Compositor does not work correctly when the Contrast value is negative.

Contrast > 0 works correctly:
contrast-increase.png

Contrast < 0 should work this way:
(as it is in the Shader Editor)
contrast-decrease-correct.png

but currently it gives an effect (increase the brightness) like this:
contrast-decrease.png

I think there's a mistake in the algorithm.
https://developer.blender.org/diffusion/B/browse/master/source/blender/compositor/operations/COM_BrightnessOperation.cpp

The source (OpenCV demhist.c) of the algorithm for comparison:
https://github.com/dermidgen/opencv.sandbox/blob/master/opencv-samples/demhist.c

Exact steps for others to reproduce the error
Connect the Value (0.5) to the Bright/Contrast (contrast -50),
the output value will be 1.125 while should be 0.5.

curve-visualizer-compositor.blend

curve-visualizer-shader.blend

**Blender Version** Broken: all **Short description of error** The Brightness/Contrast node of the Compositor does not work correctly when the Contrast value is negative. Contrast > 0 works correctly: ![contrast-increase.png](https://archive.blender.org/developer/F7631133/contrast-increase.png) Contrast < 0 should work this way: (as it is in the Shader Editor) ![contrast-decrease-correct.png](https://archive.blender.org/developer/F7631132/contrast-decrease-correct.png) but currently it gives an effect (increase the brightness) like this: ![contrast-decrease.png](https://archive.blender.org/developer/F7631134/contrast-decrease.png) I think there's a mistake in the algorithm. https://developer.blender.org/diffusion/B/browse/master/source/blender/compositor/operations/COM_BrightnessOperation.cpp The source (OpenCV demhist.c) of the algorithm for comparison: https://github.com/dermidgen/opencv.sandbox/blob/master/opencv-samples/demhist.c **Exact steps for others to reproduce the error** Connect the Value (0.5) to the Bright/Contrast (contrast -50), the output value will be 1.125 while should be 0.5. [curve-visualizer-compositor.blend](https://archive.blender.org/developer/F7638902/curve-visualizer-compositor.blend) [curve-visualizer-shader.blend](https://archive.blender.org/developer/F7638903/curve-visualizer-shader.blend)
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-07-31 12:21:04 +02:00
Member

Indeed, checking...

Indeed, checking...

This issue was referenced by 8dd95abb2f

This issue was referenced by 8dd95abb2ff9160d95808507f70b4233546e9f65
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67808
No description provided.